--- a/_posts/objectdetection/2024-07-10-utils2.md
+++ b/_posts/objectdetection/2024-07-10-utils2.md
@@ -7,10 +7,10 @@ layout: post
 
 #  grouped_dict = {image_id: group for image_id, group in grouped}
 
-![image_id](../../assets/hnv/image_id.png)
+![image_id](/assets/hnv/image_id.png)
 
 
-![group](../../assets/hnv/group.png)
+![group](/assets/hnv/group.png)
 
 
 # iterrows()
