--- a/_posts/objectdetection/2024-07-10-utils.md
+++ b/_posts/objectdetection/2024-07-10-utils.md
@@ -7,13 +7,13 @@ layout: post
 ### df.sample(frac=1).reset_index(drop=True)
 - df: 샘플링할(shuffle) pandas 데이터프래임
 - frac=1: 전체 데이터프레임에서 샘플링할 비율을 나타냅니다.
-    - ![frac](../../assets/hnv/frac.png)
+    - ![frac](/assets/hnv/frac.png)
 - reset_index(drop=True) : 샘플링 후 인덱스를 재설정
     - drop=Trup를 설정하면 이전 인덱스를 삭제하고 새로운 연속된 인덱스를 할당
 
 ### pd.concat()
 - 데이터 프레임이나 series를 연결 (concatenate)
-![cocnat](../../assets/hnv/concat.png)
+![cocnat](/assets/hnv/concat.png)
 
 ### os.PathLike
 - 시스템 경로를 나타내는 것
@@ -28,42 +28,42 @@ layout: post
 
 ### MAP
 
-![MAP](../../assets/hnv/MAP.png)  
+![MAP](/assets/hnv/MAP.png)  
 <hr>
 
-![precision_recall](../../assets/hnv/precision_recall.png)  
+![precision_recall](/assets/hnv/precision_recall.png)  
 <hr>
 
 ### iou
-![iou](../../assets/hnv/iou.png)  
+![iou](/assets/hnv/iou.png)  
 **예측된 바운더리 박스 & 사용자가 설정한 바운더리 박스 / 예측된 바운더리 박스 | 사용자가 설정한 바운더리 박스**  
 - iou >= 0.5:  tp else: fp 
 
 <hr>
 
 ### precision
-![precision](../../assets/hnv/precision.png)
+![precision](/assets/hnv/precision.png)
 - 검출 결과들 중 옳게 검출한 비율
 - fp를 줄이는게 더 중요한 경우
 <hr>
 
 ### recall
-![recall](../../assets/hnv/recall.png)
+![recall](/assets/hnv/recall.png)
 - fn을 줄이는게 더 중요한 경우
 <hr>
 
 ###  PR Curve  
-![confidence](../../assets/hnv/confidence.png)  
+![confidence](/assets/hnv/confidence.png)  
 - confidence 레벨이 높을수록 알고리즘은 그 물체가 검출해야 하는 물체와 거이 똑같다고 생각
 - threshold(한게점)을 두어 특정값 이상이 되어야 검출된 것으로 인정 **ex)한계값을 90%으로 했다면 한개만 검출된 것으로 판단**
     - precision 1/1, recall = 1/15
-![confidence](../../assets/hnv/confidence2.png)   
+![confidence](/assets/hnv/confidence2.png)   
 
-![PR Curve](../../assets/hnv/PRCurve.png)  
+![PR Curve](/assets/hnv/PRCurve.png)  
 
 <hr>
 
 ### Average Precision
 
-![ap](../../assets/hnv/ap.png)  
+![ap](/assets/hnv/ap.png)  
 - 물체 클래스가 여러개인 경우 각 클래스당 ap를 구한 다음에 그것을 모두 합한 다음에 물체 클래스의 개수로 나눠주면 그게 map
