--- a/_posts/objectdetection/2024-07-10-utils.md
+++ b/_posts/objectdetection/2024-07-10-utils.md
@@ -20,7 +20,7 @@ layout: post
 
 
 ### to_coco(csv_path)
-- coco 데이터셋의 json 파일로 변환하는 작업 수행
+- coco 데이터셋의 json 파일로 변환하는 작업 수행 (**사용자가 직접 만든 함수임**)
 
 ### COCO(json_path)
 - coco 클래스의 객체를 생성
