--- a/study.ipynb
+++ b/study.ipynb
@@ -246,6 +246,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-2.0494,  0.3071],\n",
+      "        [ 0.3813,  0.0309],\n",
+      "        [-0.5287,  0.9454],\n",
+      "        [ 0.8524, -0.9768],\n",
+      "        [-0.5810,  1.1458],\n",
+      "        [-0.3786,  0.4918],\n",
+      "        [ 1.6124, -2.9859],\n",
+      "        [ 2.0161,  0.7785],\n",
+      "        [-0.3739,  0.4907],\n",
+      "        [ 1.2721,  1.5783],\n",
+      "        [ 0.9634,  0.7011],\n",
+      "        [-0.2464, -0.5164]])\n",
+      "torch.Size([12, 5])\n",
+      "tensor([[-0.4017,  1.6131,  0.1700, -0.8103,  0.0834],\n",
+      "        [ 0.2459,  0.4188,  0.5133,  0.2581, -0.2550],\n",
+      "        [ 0.1840,  0.6595,  0.6197, -0.5834,  0.1144],\n",
+      "        [ 0.1590,  0.4301,  0.3034,  0.9845, -0.6062],\n",
+      "        [ 0.2133,  0.6357,  0.6687, -0.7122,  0.1799],\n",
+      "        [ 0.1268,  0.6968,  0.5145, -0.2798, -0.0371],\n",
+      "        [-0.0665,  0.5461, -0.1463,  2.3653, -1.2874],\n",
+      "        [ 0.8892, -0.6221,  1.0146,  0.4687, -0.2034],\n",
+      "        [ 0.1279,  0.6947,  0.5149, -0.2774, -0.0380],\n",
+      "        [ 0.8502, -0.4385,  1.1167, -0.2477,  0.1143],\n",
+      "        [ 0.5649, -0.0546,  0.8088,  0.1132, -0.1157],\n",
+      "        [-0.0591,  0.8846,  0.2454,  0.3189, -0.3528]],\n",
+      "       grad_fn=<AddmmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "\n",
+    "m = nn.Linear(2, 5)\n",
+    "input = torch.randn(12, 2)\n",
+    "print(input)\n",
+    "output = m(input)\n",
+    "print(output.size())\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class TestModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()  # nn.Module의 초기화 메서드를 호출합니다.\n",
+    "        self.layer1 = nn.Linear(10, 10)\n",
+    "        self.layer2 = nn.Linear(10, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out1 = self.layer1(x)\n",
+    "        out2 = self.layer2(out1.detach())\n",
+    "        return out2\n",
+    "\n",
+    "model = TestModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:  tensor([[-0.4331, -0.9946, -0.7577,  0.5964, -0.4222,  0.4360, -0.2240,  0.2034,\n",
+      "          0.8203, -0.7823]], grad_fn=<AddmmBackward0>)\n",
+      "a.mean():  tensor(-0.1558, grad_fn=<MeanBackward0>)\n",
+      "None\n",
+      "tensor([[-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260],\n",
+      "        [-0.2365,  0.0177,  0.0436,  0.1896,  0.1069, -0.2750,  0.1658, -0.0010,\n",
+      "         -0.2374,  0.0260]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(1, 10)\n",
+    "a = model(x)\n",
+    "print('a: ',a)\n",
+    "print('a.mean(): ', a.mean())\n",
+    "a.mean().backward()\n",
+    "print(model.layer1.weight.grad)\n",
+    "print(model.layer2.weight.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(12.)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "w = torch.tensor(2.0, requires_grad = True)\n",
+    "y = w**3 + 10\n",
+    "y.backward()\n",
+    "w.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
