--- a/_posts/network_programe/2024-11-10-chap6_practice06-1.md
+++ b/_posts/network_programe/2024-11-10-chap6_practice06-1.md
@@ -315,8 +315,33 @@ struct ClientInfo {
 3. 마찬가지로 `clientaddr`에 `ClientInfo` 구조체의 멤버인 `clientaddr`를 할당
 4. `hThread = CreateThread(NULL, 0, ProcessClient, (LPVOID)clientInfo, 0, NULL);` 에서 void 형태로 ProcessClient함수에 인수로 `clientInfo`의 포인터 전달(*1번에 의해 clientInfo는 ClinetInfo 구조체를 가리킴*)
 
+
 ### processClient함수 부분
 1. `(ClientInfo *)` 구조체 지식임을 명시적으로 지정하여 `arg` 포인터가 `ClientInfo`를 가리킴을 명시적으로 알림
 (*`DWORD WINAPI ProcessClient(LPVOID arg)`에서 void 형태로 `arg`를 매개변수로 받았기 때문에 함수 안에서 이를 형 변현해야 구조체의 맴버에 접근한다*)
 2. `client_sock`에 `ClinetInfo`의 구조체인 `clinet_sock`를 할당한다
 
+3. `delete clientInfo`로 힙에 할당된 메모리 반환
+(*new로 할당된 메모리는 자동으로 해제되지 않는다*)
+
+
+```
+힙(Heap) 메모리:
+
+new, malloc 등 동적 메모리 할당 함수를 통해 생성된 변수들이 힙에 저장됩니다.
+예를 들어, ClientInfo* clientInfo = new ClientInfo;와 같이 동적으로 생성된 변수들은 힙에 위치합니다.
+힙에 할당된 메모리는 수동으로 delete 또는 free를 사용해 해제해야 합니다. 그렇지 않으면 **메모리 누수(memory leak)**가 발생합니다.
+힙은 프로그램 전체에서 공유되므로, 여러 함수나 스레드에서도 접근할 수 있습니다.
+스택(Stack) 메모리:
+
+함수 내에서 선언된 일반 변수나 함수 매개변수들은 스택에 저장됩니다.
+예를 들어, int x = 10;과 같이 함수 내에서 선언된 지역 변수나, 함수에 전달되는 인자들은 스택에 위치합니다.
+스택은 함수가 종료되면 자동으로 해제되므로, 별도로 메모리 관리를 할 필요가 없습니다.
+스택은 각 함수 호출마다 독립적으로 할당되기 때문에, 다른 함수나 스레드에서는 해당 스택 메모리에 직접 접근할 수 없습니다.
+전역 변수와 정적 변수:
+
+전역 변수와 static 키워드로 선언된 변수는 프로그램 시작 시 데이터 영역에 할당되며, 프로그램이 종료될 때까지 유지됩니다.
+이들 변수는 힙이나 스택이 아닌 별도의 메모리 영역에 저장됩니다.
+```
+즉, getpeername()만 지우면 된다는건 헛소리였다.  
+왜냐면 클라이언트의 정보를 전달 할 수가 없으니깐  
