--- a/_posts/computervision/2024-11-08-chap3-4.md
+++ b/_posts/computervision/2024-11-08-chap3-4.md
@@ -114,7 +114,7 @@ OverflowError: Python integer -3 out of bounds for uint8
 그러면 어찌해야 할까?  
 -255 ~ -128 사이와 128 ~255사이는 발생할 수 있지만 빈도는 작을 것이기 때문에 이곳을 희생하기로 한다.  
 따라서 128을 더해 -127~383 범위로 변환환 후 np.clip 함수로 0 ~255 범위로 축소한다.  
-`np.clip(a,p,q)`는 a가 p보다 작으면 p, q보다 크면 q로 바구고 그렇지 않으면 원래 값을 유지한다.  
+`np.clip(a,p,q)`는 a가 p보다 작으면 p, q보다 크면 q로 바꾸고 그렇지 않으면 원래 값을 유지한다.  
 `np.clip(a+128,0,255)`를 추가로 적용해 0~255 범위로 변환한다.  
 
 `smooth=np.hstack((cv.GaussianBlur(gray,(5,5),0.0),cv.GaussianBlur(gray,(9,9),0.0),cv.GaussianBlur(gray,(15,15),0.0)))` 
