--- a/_posts/hnv/2024-11-06-voc_data.md
+++ b/_posts/hnv/2024-11-06-voc_data.md
@@ -78,6 +78,6 @@ voc( visual object classes challenge)는 현실적인 장면에서 여러 시각
 
 세분화 대회
 --
-세분화: 각 픽셀에 푯되는 객체의 클래스나 배경을 제공하는 픽셀 단위 세분화를 생성합니다.  
+세분화: 각 픽셀에 표시되는 객체의 클래스나 배경을 제공하는 픽셀 단위 세분화를 생성합니다.  
 ![alt text](image.png)
 
