--- a/_posts/computervision/2024-11-12-chap6-5.md
+++ b/_posts/computervision/2024-11-12-chap6-5.md
@@ -116,3 +116,12 @@ QFileDialog는 다음과 같은 기능을 제공합니다.
 파일 저장 (getSaveFileName): 파일을 저장할 위치를 선택할 수 있는 대화 상자를 열어, 사용자가 선택한 파일 경로를 반환합니다.
 디렉토리 선택 (getExistingDirectory): 폴더를 선택할 수 있는 대화 상자를 열고, 선택한 폴더의 경로를 반환합니다.
 ```
+
+
+왜 봉합이 안되나 했더니
+
+```
+같은 이미지로 스티칭 시도 시 발생하는 일:
+이미지 간 겹침이 없음: stitch() 함수는 여러 이미지를 겹치는 부분을 찾아서 이어붙입니다. 하지만 같은 이미지를 주면, 겹칠 부분이 없기 때문에 이미지 매칭을 제대로 할 수 없습니다.
+스티칭 실패: 동일한 이미지를 입력하면, 스티칭에 실패하거나 결과가 제대로 나오지 않습니다. cv2.Stitcher_create() 함수는 두 이미지 이상의 다양한 정보와 겹침 영역을 필요로 하기 때문에 같은 이미지를 주면 스티칭 작업이 불가능합니다.
+```
