--- a/_posts/computer_structure/2024-11-19-biased.md
+++ b/_posts/computer_structure/2024-11-19-biased.md
@@ -22,4 +22,7 @@ ex) 바이어스가 127이면 지수 비트에 01111111을 더해주면 끝
 
 ![alt text](image-5.png)  
 
-M의 범위가 0.5보다 크거나 같고 1-2^-23보다 작거나 같아야 할것 같은데 왜 2^-24보다 작거나 같은지 이해가 안가네
+M의 범위가 0.5보다 크거나 같고 1-2^-23보다 작거나 같아야 할것 같은데 왜 **2^-24**보다 작거나 같은지 이해가 안가네
+
+### 이유
+히든 비트가 있으니깐 24비트로 표현 가능
