--- a/_posts/computer_structure/2024-11-19-ieee754_3.md
+++ b/_posts/computer_structure/2024-11-19-ieee754_3.md
@@ -15,6 +15,6 @@ layout: post
 
 ### 지수 범위에 대한 설명
 E= 255, 0 일 때는 따로 취급하기 때문에 E=1인 -16382가 최소값
-
+![alt text](image-32.png)  
 ![alt text](image-11.png)  
 
