--- a/_posts/computervision/2024-11-25-chap7-6.md
+++ b/_posts/computervision/2024-11-25-chap7-6.md
@@ -94,7 +94,7 @@ SGD는 신경망에서 가장 오랫동안 애용해온 최적화 방법(*optimi
 
 *l*층의 가중치 **U**^*l*은 *l,l+1,...,L*층에 영향을 미친다.  
 
-*l*층의 그레이디언트는 *l+1*층의 그레이디언트 dJ/d**U**^*l*+1에 두 층 사이의 그레이디언트 a**U**^*l*+1/d**U**^*l*을 곱하여 구할 수 있다.  
+*l*층의 그레이디언트는 *l+1*층의 미분에(d loss/d*l*+1) *l*층의 미분(d *l*+1/d*l*)을 곱하면 됨
 
 ![alt text](image-119.png)
 ![alt text](image-120.png)
