--- a/_posts/computer_structure/2024-11-26-chap5-1.md
+++ b/_posts/computer_structure/2024-11-26-chap5-1.md
@@ -9,9 +9,83 @@ layout: post
 
 - CPU가 어떤 정보를 기억장치에 쓰거나 기억장치로부터 읽는 동작을 **액세스**한다고 말한다.  
 
-- **순차적 엑세스(sequential access)**: 기억장치에 저장된 정보들을 처음부터 순서대로 엑세스한다.  
-    - 정보들은 내부적으로 레코드라고 불리는 정보 단위로 분리되어 저장
-    - 각 레코드는 고유의 주소를 가진다.
-    - **정보가 저장된 위치에 따라 엑세스 시간이 달라진다
-    - *ex)자기테이프*  
-- **직접 액세스(direct access)**: 
+### **순차적 엑세스(sequential access)**:
+- 기억장치에 저장된 정보들을 처음부터 순서대로 엑세스한다.  
+- 정보들은 내부적으로 레코드라고 불리는 정보 단위로 분리되어 저장
+- 각 레코드는 고유의 주소를 가진다.
+- **정보가 저장된 위치에 따라 엑세스 시간이 달라진다
+- *ex)자기테이프*  
+### **직접 액세스(direct access)**:
+- 읽기/쓰기 장치가 각 레코드(혹은 블록)의 근처로 직접 이동한 후에 순차적 검색을 통하여 최종 위치에 도달한다.  
+- 엑세스 시간은 정보의 저장 위치에 따라 가변적이다. 
+### **임의 엑세스(random access)**:
+- 기억장치 내의 모든 저장 장소들은 고유의 주소를 가지고 있으며, 별도의 읽기/쓰기 회로를 가지고 있다.  
+- 어떤 위치든 임의로 선택될 수 있고, 직접 주소지정 되고, 액세스될 수 있다.  
+- 기억장치 내의 어떤 위치를 액세스하든 그에 걸리는 시간이 항상 일정하다.
+- *ex) 반도체 기억장치*
+### **연관 액세스(associative access)**:
+- 각 기억 장소에는 키(key)값에 해당하는 비트들이 데이터와 함께 저장되어 있다.  
+- 액세스 요구에는 주소 대신에 원하는 비트 패턴이 포함되어 있다.  
+- 비트들과 각 기억 장소의 키 비트들을 비교하여, 일치하는 기억장소의 데이터가 읽혀져 출력된다. 
+- 키값의 비교에 걸리는 시간은 기억 장소의 위치에 관계없이 일정하다
+- 일반적으로 모든 기억 장소의 키값들을 동시에 비교할 수 있는 하드웨어를 포함한다.(*매우 많이 비쌈*)  
+
+### 엑세스 속도
+
+- 기억장치에서 용량을 나타내는 단위는 byte 혹은 **단어**다.  
+
+- 단어 길이는 8, 16, 32 혹은 64비트  
+
+- 단어의 길이는 CPU가 실행할 명령어의 길이 혹은 내부 연산에서 한 번에 처리할 수 있는 데이터 비트의 수와 같다.  
+
+- CPU가 한 번의 기억장치 액세스에 의해 읽거나 쓸 수 있는 비트 수를 **전송단위**라 한다.  
+
+- 외부 기억장치에서는 데이터가 단어보다 훨씬 더 큰 단위로 전송되기도 하는데, 그 단위를 **블록(block)** 이라고 부른다.  
+    - 일반적으로 512byte. 1K byte
+    - 외부 기억장치에 접속되는 데이터 버스의 폭은 8비트, 16비트 혹은 32비트  
+
+    *블록과 버스의 폭이 다르므로 한 블록을 전송하기 위해서는 여러 번의 전송 독작들이 연속적으로 수행되어야 한다*
+
+### **주소지정 단위** : 하나의 주소에 의해 액세스되는 비트들의 그룹  
+    - 각 기억장치 위치에는 고유의 주소가 할당된다
+    - 주소를 바이트 또는 단어로 지정 가능(*대부분은 바이트*)  
+
+
+ex)예시
+--
+1. A=2라면, 2개의 주소비트로 2^2=4개의 주소를 만들 수 있다  
+
+2. 여기서 각 주소가 1바이트를 가리킨다면, 4*1바이트= 4바이트  
+
+3. 여기서 각 주소가 1단어(*4바이트*)를 가리키면 4* 1단어= 4*4바이트 =16바이트  
+
+
+### **엑세스 시간(access time)**: 
+- 주소와 읽기/쓰기 신호가 기억장치에 도착하는 순간부터 데이터가 저장되거나 읽혀지는 동작이 완료되는 순간까지의 시간  
+
+### **기억장치 사이클 시간(memory cycle time)**:
+- 엑세스 시간과 다음 엑세스를 시작하기 위해 필요한 동작에 걸리는 추가적인 시간을 합한 시간  
+
+(*읽기 동작 후 기억이 지워진걸 복구하는 시간, 최근 저장장치는 내용이 안지워져서 엑세스 시간과 사이클 시간이 같음*)
+
+### 데이터 전송률(data transfer rate):
+- 기억장치로부터 초당 읽혀지거나 쓰여질 수 있는 비트 수
+- (1/액세스 시간) x (한번에 읽혀지는 데티어 바이트의 수)  
+
+ex) 
+--
+RAM 모듈의 액세스 시간이 100ns이고 한 번에 32비트씩 읽혀진다면, 데이터 전송률은  
+
+{(1/100x10^-9)} x (32/8) = 40[MBytes/sec]  
+
+### 기억장치의 분류
+- LSI 또는 VLSI기술을 이용하는 **반도체 기억장치**
+
+- 디스크 및 테이프와 같이 자력을 이용하는 **자기-표면 기억장치**
+
+- 레이저 광을 이용하는 **광 저장장치**
+
+- 휘발성 기억장치: 저장된 정보가 시간이 지남에 따라 점차 사라지거나, 전력 공급이 중단되며 소멸  
+(*반도체 기억장치*)
+- 비휘발성 기억장치: 저장된 정보는 필요에 의해 변경될 때까지는 그대로 유지되며, 정보 유지를 위하여 지속적으로 전력을 공급할 필요 없음  
+(*반도체 기억장치, 자기-표면 기억장치, 광 저장장치*)
